--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -57,6 +57,56 @@
     "    eps=1e-9\n",
     "    return -np.mean(np.sum(Y*np.log(p+eps), axis=1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a3759a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def init_params(input_dim=2, hidden=16, output_dim=2):\n",
+    "    W1 = np.random.randn(input_dim, hidden)*0.1\n",
+    "    b1 = np.zeros((1, hidden))\n",
+    "    W2 = np.random.randn(hidden, output_dim)*0.1\n",
+    "    b2 = np.zeros((1, output_dim))\n",
+    "    return {'W1':W1,'b1':b1,'W2':W2,'b2':b2}\n",
+    "\n",
+    "def forward_backward(params, X, Y, act='relu'):\n",
+    "    f_act, d_act = ACTS[act]\n",
+    "    W1,b1,W2,b2 = params['W1'],params['b1'],params['W2'],params['b2']\n",
+    "    z1 = X@W1 + b1\n",
+    "    a1 = f_act(z1)\n",
+    "    z2 = a1@W2 + b2\n",
+    "    p = softmax(z2)\n",
+    "    loss = cross_entropy(p,Y)\n",
+    "    m = X.shape[0]\n",
+    "    dz2 = (p - Y)/m\n",
+    "    dW2 = a1.T@dz2\n",
+    "    db2 = np.sum(dz2, axis=0, keepdims=True)\n",
+    "    da1 = dz2@W2.T\n",
+    "    if act=='relu':\n",
+    "        dz1 = da1*drelu(z1)\n",
+    "    else:\n",
+    "        dz1 = da1*d_act(a1)\n",
+    "    dW1 = X.T@dz1\n",
+    "    db1 = np.sum(dz1, axis=0, keepdims=True)\n",
+    "    grads = {'dW1':dW1,'db1':db1,'dW2':dW2,'db2':db2}\n",
+    "    return loss, grads\n",
+    "\n",
+    "def train_shallow(X, Y, hidden=16, lr=0.1, epochs=2000, act='relu'):\n",
+    "    params = init_params(hidden=hidden)\n",
+    "    losses=[]\n",
+    "    for e in range(epochs):\n",
+    "        loss, grads = forward_backward(params, X, Y, act)\n",
+    "        params['W1'] -= lr*grads['dW1']\n",
+    "        params['b1'] -= lr*grads['db1']\n",
+    "        params['W2'] -= lr*grads['dW2']\n",
+    "        params['b2'] -= lr*grads['db2']\n",
+    "        if (e+1)%100==0:\n",
+    "            losses.append(loss)\n",
+    "    return params, losses\n"
+   ]
   }
  ],
  "metadata": {
